--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" />
     <title>Food Order App</title>
   </head>
   <body>
-    <div id="overlays" href="/a.png"></div>
+    <div id="overlays"></div>
     <div id="root"></div>
   </body>
 </html>
