Refactored the google analytics code. Also added validation for cart items to make sure ordered amount per item does not exceed more than 5

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script
+    <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-2EVRRPFDQ0"
     ></script>
@@ -13,7 +13,7 @@
       gtag("js", new Date());
 
       gtag("config", "G-2EVRRPFDQ0");
-    </script>
+    </script> -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -22,5 +22,6 @@
   <body>
     <div id="overlays"></div>
     <div id="root"></div>
+    <div id="analytics"></div>
   </body>
 </html>
